# edge_based_face_segmentation

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  chunk.py
src/edge_based_face_segmentation/: __init__.py  contour_segmentor.py
src/edge_segmentation/: contour_info.py  contour_segmentor.py  frame_info.py  function_wrapper.py  processing_functions.py  processing_object_wrapper.py  processing_objects.py
